  The count_blocks and sample_ores commands max size has increased from 32 to 40.
  Unidentified Item Configuration settings have moved to their own config file.
REMOVED:
  Removed Gem shards. (Been meaning to do this for a while.)
   - As a result, the Crystal Matter Generator now produces 1 random Gem every 1.5 hours using
     2,700,000 total energy.
FIXED:
  Fixed not dropping custom mob loot for the Zombified Piglin, ever since the ID changed in Minecraft 1.16.



v1.5.2 - April 5, 2025
NEW:
  It is now possible to get a Soul Speed Enchanted Book by inserting an Amethyst in the Magic Infuser.
  Now, the Dimensional Anchor itself (as an item entity) will not travel to other dimensions.
  Now detects the WTHIT (What The Hell Is That) mod.
  Added EMC value to Unimatter.
CHANGES:
  Renamed Matter/Energy Converter to Matter/Energy Core.
  Circuit Tier 8 and Circuit Tier 9 now use an Aluminum Ingot in their recipe instead of an
    Aluminum Plate.
  If you enabled the Dump Tags config option in the ADDSynthCore config, the tags are
    now sorted alphabetically, but lists vanilla minecraft tags first, followed
    by forge tags, then tags from other mods.
REMOVED:
  Amethyst:
   - We use vanilla Amethyst Shards now.
   - We still spawn Amethyst Ore, and it drops a vanilla Amethyst Shard when mined.
   - If your world previously contained Amethyst or Amethyst Blocks from ADDSynth Materials,
      those will automatically be replaced with vanilla Amethyst Shards and Amethyst Blocks.
  Removed Null Block to Void Crystals crafting recipe.
   - Since you're probably not supposed to be able to interact with ethereal objects.
FIXED:
  Various Team Manager Fixes:
   - Fixed Client randomly crashing when interacting with Team Manager.
   - Fixed Objective Criteria Data not showing on first use.
   - Fixed Team Color not being set correctly.
  Fixed Passive Machines (Plasma Generator and Crystal Matter Generator) not saving their inventory.