@@ -120,7 +120,7 @@
 
 
 
-
+"death.attack.laser": "%1$s died from Laser.",
 
 "stat.overpowered.gems_converted": "Gems Converted",
 "stat.overpowered.lasers_fired": "Lasers Fired",
