@@ -1,6 +1,6 @@
 {
   "effects": "burning",
-  "exhaustion": 0.0,
+  "exhaustion": 0.1,
   "message_id": "laser",
   "scaling": "always"
 }
